[workspace]
members = [
    "backrun",
    "cli",
    "jito_protos",
    "searcher_client",
]
resolver = "2"

[workspace.dependencies]
jito-searcher-client = { path = "./searcher_client" }
jito-protos = { path = "./jito_protos" }

solana-sdk = "=1.18.23"
solana-client = "=1.18.23"
solana-perf = "=1.18.23"
solana-metrics = "=1.18.23"
solana-transaction-status = "=1.18.23"

clap = { version = "4" }
dotenvy = { version = "0.15.7" }
bincode = "1.3.3"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
spl-memo = "3.0.1"
tokio = { version = "1" }
tonic = { version = "0.10" }
tonic-build = "0.10"
histogram = "0.6.9"
rand = "0.8.5"
thiserror = "2.0.11"
uuid = { version = "1.12.0" }
bytes = "1.9.0"
prost = "0.12.6"
prost-types = "0.12.6"
