[package]
name = "shiroi-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shiroi-searcher-client = { workspace = true }
shiroi-protos = { workspace = true }

dotenvy = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true }

log = "0.4.17"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-memo = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
