[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-perf = { workspace = true }
solana-sdk = { workspace = true }

bincode = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
