[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
jito-protos = { workspace = true }

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }

futures-util = { workspace = true }
log = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = [ "tls", "tls-roots", "tls-webpki-roots"] }
